--- a/src/app/modules/register/register.page.html
+++ b/src/app/modules/register/register.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar color="white">
     <ion-buttons slot="start">
-      <ion-button routerLink="/login" routerDirection="back">
+      <ion-button (click)="globals.openModal('walkthroughmodal')">
         <i class="ri-arrow-left-s-line ri-xl fs-22"></i>
       </ion-button>
     </ion-buttons>
