--- a/src/app/modules/forgot/components/forgotpassword-form/forgotpassword-form.component.html
+++ b/src/app/modules/forgot/components/forgotpassword-form/forgotpassword-form.component.html
@@ -1,11 +1,11 @@
-<form [formGroup]="forgetForm" (ngSubmit)="onsubmit.emit(forgetForm.value)" role="form" class="ion-margin-top">
-  <ion-row class="ion-no-margin">
+<form [formGroup]="forgetForm" (ngSubmit)="onsubmit.emit(forgetForm.value)" role="form" class="form">
+  <ion-row>
     <ion-col size="12">
-      <ion-item lines="none" detail="false" color="light" class="ion-border">
-        <ion-label aria-label="radix pin" position="stacked">Radix Pin</ion-label>
-        <ion-input formControlName="pin" aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number"></ion-input>
+      <ion-label aria-label="radix pin" class="fs-12 text-dark">Radix Pin</ion-label>
+      <ion-item class="ion-no-padding ion-item-border-radius" color="light" mode="ios">
+        <ion-input aria-label="radix pin" formControlName="pin" aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number"></ion-input>
       </ion-item>
-      <div class="validation-errors fs-12 text-danger ion-padding-start">
+      <div class="validation-errors fs-12 text-danger">
         <div *ngFor="let validation of validation_messages.pin">
           <div class="error-message" *ngIf="forgetForm.get('pin')?.hasError(validation.type) && forgetForm.get('pin')?.touched">
             <div>
