--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -1,11 +1,11 @@
-<form [formGroup]="loginForm" (ngSubmit)="onsubmit.emit(loginForm.value)" class="ion-margin-top">
-  <ion-row class="ion-no-margin">
+<form [formGroup]="loginForm" (ngSubmit)="onsubmit.emit(loginForm.value)" class="form">
+  <ion-row>
     <ion-col size="12">
-      <ion-item color="light" lines="none" detail="false" class="no-shadow">
-          <ion-label aria-label="radix pin" position="stacked" class="fs-14 text-medium">Radix Pin</ion-label>
-          <ion-input aria-label="radix pin" formControlName="pin" aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
+      <ion-label aria-label="radix pin" class="fs-12 text-dark">Radix Pin</ion-label>
+      <ion-item class="ion-no-padding ion-item-border-radius" color="light" mode="ios">
+        <ion-input aria-label="radix pin" formControlName="pin" aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number"></ion-input>
       </ion-item>
-      <div class="validation-errors fs-12 text-danger ion-padding-start">
+      <div class="validation-errors fs-12 text-danger">
         <div *ngFor="let validation of validation_messages.pin">
           <div class="error-message" *ngIf="loginForm.get('pin')?.hasError(validation.type) && loginForm.get('pin')?.touched">
             <div>
@@ -16,24 +16,15 @@
       </div>
     </ion-col>
     <ion-col size="12">
-      <ion-item color="light" lines="none" detail="false" class="no-shadow">
-          <ion-label aria-label="radix passcode" position="stacked" class="fs-14 text-medium">Radix Passcode</ion-label>
-          <ion-input formControlName="password" [type]="!hide ? 'text' : 'password'" aria-label="radix passcode" placeholder="XXXXXXX" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
-          <ion-button slot="end" (click)="togglePasswordFieldType()" color="dark" fill="clear" style="margin-top: 20px;">
-            <i *ngIf="hide" class="ri-eye-close-line ri-xl fs-20"></i>
-            <i *ngIf="!hide" class="ri-eye-fill ri-xl fs-20"></i>
-          </ion-button>
-      </ion-item>
-
-      <!-- <ion-item lines="none" detail="false" color="light" class="ion-border" mode="ios">
-        <ion-label aria-label="radix passcode" position="stacked">Passcode</ion-label>
-        <ion-input formControlName="password" [type]="!hide ? 'text' : 'password'" aria-label="radix passcode" placeholder="XXXXXXX"></ion-input>
-        <ion-button slot="end" (click)="togglePasswordFieldType()" color="dark" fill="clear" style="margin-top: 20px;">
-          <i *ngIf="hide" class="ri-eye-close-line ri-xl fs-20"></i>
-          <i *ngIf="!hide" class="ri-eye-fill ri-xl fs-20"></i>
+      <ion-label class="fs-12 text-dark">Radix Passcode</ion-label>
+      <ion-item class="ion-no-padding ion-item-border-radius" color="light" mode="ios">
+        <ion-input formControlName="password" [type]="!hide ? 'text' : 'password'" aria-label="radix passcode" placeholder="XXXXXXX" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
+        <ion-button slot="end" (click)="togglePasswordFieldType()" color="dark" fill="clear" style="margin-top: 3px;">
+          <i *ngIf="hide" class="ri-eye-close-line ri-xl fs-18"></i>
+          <i *ngIf="!hide" class="ri-eye-fill ri-xl fs-18"></i>
         </ion-button>
-      </ion-item> -->
-      <div class="validation-errors fs-12 text-danger ion-padding-start">
+      </ion-item>
+      <div class="validation-errors fs-12 text-danger">
         <div *ngFor="let validation of validation_messages.password" class="error">
           <div *ngIf="loginForm.get('password')?.hasError(validation.type) && loginForm.get('password')?.touched">
             <div>
@@ -42,6 +33,11 @@
           </div>
         </div>
       </div>
+    </ion-col>
+    <ion-col size="6" offset="6">
+      <ion-button expand="full" size="small" fill="clear" mode="ios" color="dark" routerLink="/forgot">
+        <span class="fs-14">Forgot Password</span>
+      </ion-button>
     </ion-col>
     <ion-col size="12">
       <ion-button type="submit" class="ion-no-border" expand="full" size="large" [disabled]="loginForm.invalid" color="primary">
