--- a/src/app/modules/modals/generatestatement-modal/generatestatement-modal.component.html
+++ b/src/app/modules/modals/generatestatement-modal/generatestatement-modal.component.html
@@ -11,6 +11,9 @@
     <br />
     <br />
     <br />
+    <div *ngIf="plt.is('ios')">
+      <br />
+    </div>
     <ion-row style="margin-left: 10px;">
       <ion-col size="6">
         <ion-label class="fs-12 text-dark">Start Date</ion-label>
