--- a/src/app/modules/modals/changepassword-modal/components/changepassword-form/changepassword-form.component.html
+++ b/src/app/modules/modals/changepassword-modal/components/changepassword-form/changepassword-form.component.html
@@ -3,11 +3,11 @@
     <ion-col size="12">
       <ion-label aria-label="radix pin" class="fs-12 text-dark">Radix Pin</ion-label>
       <ion-item class="ion-no-padding ion-item-border-radius" color="white" mode="ios">
-        <ion-input aria-label="radix pin" formControlName="pin" aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
+        <ion-input aria-label="radix pin" formControlName="PIN" aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
       </ion-item>
       <div class="validation-errors fs-12 text-danger ion-padding-start">
-        <div *ngFor="let validation of validation_messages.pin">
-          <div class="error-message" *ngIf="changepasswordForm.get('pin')?.hasError(validation.type) && changepasswordForm.get('pin')?.touched">
+        <div *ngFor="let validation of validation_messages.PIN">
+          <div class="error-message" *ngIf="changepasswordForm.get('PIN')?.hasError(validation.type) && changepasswordForm.get('PIN')?.touched">
             <div>
               {{" "+validation.message}}
             </div>
