--- a/src/app/modules/accounts/components/transactions/transaction-lists/transaction-lists.component.html
+++ b/src/app/modules/accounts/components/transactions/transaction-lists/transaction-lists.component.html
@@ -26,7 +26,7 @@
         <p class="text-medium fs-12">{{trans?.DESCRIPTION}}</p>
       </ion-label>
       <ion-note align="right">
-        <span class="fs-14 text-dark">{{ trans.RSA_CONTRIBUTION || 0 | currency: currency}}</span><br />
+        <span class="fs-14 text-dark">{{ trans?.TOTAL_CONTRIBUTION || trans?.RSA_CONTRIBUTION || 0 | currency: currency}}</span><br />
         <span class="fs-12 text-medium" style="position: relative;top: -2px;">{{ trans?.VALUE_DATE | date }}</span>
       </ion-note>
     </ion-item>
