--- a/src/app/modules/modals/changepassword-modal/components/changepassword-form/changepassword-form.component.html
+++ b/src/app/modules/modals/changepassword-modal/components/changepassword-form/changepassword-form.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="changepasswordForm" (ngSubmit)="onsubmit.emit(changepasswordForm.value)" class="form">
   <ion-row>
-    <ion-col size="12">
+    <!-- <ion-col size="12">
       <ion-label aria-label="radix pin" class="fs-12 text-dark">Radix Pin</ion-label>
       <ion-item class="ion-no-padding ion-item-border-radius" color="white" mode="ios">
         <ion-input aria-label="radix pin" formControlName="PIN" aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
@@ -14,7 +14,7 @@
           </div>
         </div>
       </div>
-    </ion-col>
+    </ion-col> -->
     <ion-col size="12">
       <ion-label aria-label="radix passcode" class="fs-12 text-dark">Radix Passcode</ion-label>
       <ion-item class="ion-no-padding ion-item-border-radius" color="white" mode="ios">
