--- a/src/app/modules/modals/feedback-modal/feedback-modal.component.html
+++ b/src/app/modules/modals/feedback-modal/feedback-modal.component.html
@@ -4,14 +4,14 @@
 
 <full-modal [open]="isOpen" (closeModal)="globals.closeModal('feedbackmodal')" [asPage]="false" [headerColor]="'white'" [headerClass]="'bg-white'" [bodyColor]="'light'" [id]="'feedback'" [title]="'Feedback'">
   <ion-content color="light">
-    <ion-list-header>
+    <!-- <ion-list-header>
       <ion-label>
           <p class="fs-14 text-medium">
               We are available in these countries please<br />
               choose one
           </p>
       </ion-label>
-    </ion-list-header>
+    </ion-list-header> -->
+    <feedback-form (onSubmit)="userService.send_feedback($event)"></feedback-form>
   </ion-content>
-  <!-- <feedback-form (onSubmit)="userService.send_feedback($event)"></feedback-form> -->
 </full-modal>
