--- a/src/app/modules/home/components/quick-actions/quick-actions.component.scss
+++ b/src/app/modules/home/components/quick-actions/quick-actions.component.scss
@@ -1,13 +1,6 @@
 :host {
     ion-fab-button {
         margin: 0px auto !important;
-        // margin-bottom: 7px !important;
-        height: 40px !important;
-        width: 40px !important;
-        i {
-            font-size: 22px !important;
-            color: var(--ion-color-dark) !important;
-        }
     }
     .scrollable-chips {
         display: block;
@@ -18,35 +11,44 @@
         margin-top: 10px !important;
         margin-bottom: 10px !important;
 
-        .product {
-            display: inline-block;
-            width: 65px !important;
-            text-align: center !important;
-            margin-right: 10px !important;
-            padding-top: 5px;
-            padding-bottom: 7px;
-            border-radius: 5px !important;
-            --background: #21205c6a !important;
-            --background-color: #21205c6a !important;
-            &.fb {
-                width: 60px !important;
-                ion-fab-button {
-                    // --border-radius: 5px !important;
-                    // border-radius: 5px !important;
-                    margin-bottom: 7px !important;
-                    height: 45px !important;
-                    width: 45px !important;
-                    i {
-                        font-size: 20px !important;
-                        color: var(--ion-color-white) !important;
-                    }
-                }
+    }
+    .product {
+        width: calc(100% - 6px) !important;
+        margin: 3px auto !important;
+        // width: 75px !important;
+        text-align: center !important;
+        // margin-right: 10px !important;
+        padding-top: 5px;
+        padding-bottom: 7px;
+        border-radius: 5px !important;
+        background:#161552 !important;
+        --background: #161552 !important;
+        --background-color: #161552 !important;
+        background-color: #161552 !important;
+        i, h2 {
+            font-size: 25px !important;
+            color: var(--ion-color-white) !important;
+        }
+        &.fb {
+            width: 70px !important;
+            ion-fab-button {
+                // --border-radius: 5px !important;
+                // border-radius: 5px !important;
+                margin-bottom: 7px !important;
+                // height: 45px !important;
+                // width: 45px !important;
             }
+        }
 
-            ion-label {
-                h2 {
-                    font-size: 11px !important;
-                }
+        ion-fab-button {
+            margin-bottom: -5px !important;
+        }
+
+        ion-label {
+            margin-top: -15px !important;
+            h2 {
+                font-size: 11px !important;
+                font-weight: 400 !important;
             }
         }
     }
