--- a/src/app/modules/register/register.page.html
+++ b/src/app/modules/register/register.page.html
@@ -17,7 +17,7 @@
   <ion-list-header class="ion-margin-bottom">
     <ion-label>
       <h2 class="fs-20">Create your Account</h2>
-      <p class="ion-text-wrap fs-12">By continuning, you agree to Radix terms of service and acknolwedge our privacy policy</p>
+      <p class="ion-text-wrap fs-12">By continuning, you agree to Cardinalstone terms of service and acknolwedge our privacy policy</p>
     </ion-label>
   </ion-list-header>
 
