--- a/src/app/shared/components/loaders/onloading/onloading.component.html
+++ b/src/app/shared/components/loaders/onloading/onloading.component.html
@@ -4,6 +4,6 @@
     <loading></loading>
   </div>
   <br />
-  <h3 class="fs-12 bottom text-primary">Powered by <br /><span class="fs-20 bold">Radix Pension Managers</span></h3>
+  <h3 class="fs-12 bottom text-primary">Powered by <br /><span class="fs-20 bold">Cardinal Stone Pension Managers</span></h3>
   <br />
 </div>
