--- a/src/app/shared/components/onboarding/onboarding.component.html
+++ b/src/app/shared/components/onboarding/onboarding.component.html
@@ -15,7 +15,7 @@
   >
     <ng-container>
       <swiper-slide>
-        <img src="assets/img/bg/pension not tension jpeg uche.jpg" id="content-page" />
+        <img src="assets/img/bg/Acces your RSA.png" id="content-page" />
         <ion-item lines="none" color="white">
           <ion-label class="ion-text-wrap" align="left">
             <h2 class="fs-20 text-primary ion-margin-bottom bold">Start Pension Planning now</h2>
@@ -26,7 +26,7 @@
     </ng-container>
     <ng-container>
       <swiper-slide>
-        <img src="assets/img/bg/Monday motivation uche 1.jpg" id="content-page" />
+        <img src="assets/img/bg/An enriched future awaits you copy 2.png" id="content-page" />
         <ion-item lines="none" color="white">
           <ion-label class="ion-text-wrap" align="left">
             <h2 class="fs-20 text-primary ion-margin-bottom bold">Enjoy your retirement</h2>
@@ -37,7 +37,7 @@
     </ng-container>
     <ng-container>
       <swiper-slide>
-        <img src="assets/img/bg/Health and Retirement A.jpg" id="content-page" />
+        <img src="assets/img/bg/Data recapture.png" id="content-page" />
         <ion-item lines="none" color="white">
           <ion-label class="ion-text-wrap" align="left">
             <h2 class="fs-20 text-primary ion-margin-bottom bold">Connect Your Friends Anytime</h2>
