--- a/src/app/modules/accounts/components/accounts/accounts-cards/accounts-cards.component.html
+++ b/src/app/modules/accounts/components/accounts/accounts-cards/accounts-cards.component.html
@@ -14,7 +14,7 @@
   <div style="margin-top: -20px;">
     <ion-item mode="ios" detail="false" lines="none" class="bg-transparent" style="margin-bottom: -10px;">
       <ion-label>
-        <h2 class="fs-14 text-medium">Bid Price {{ acct?.BID_PRICE || 0 | currency: currency }}</h2>
+        <h2 class="fs-14 text-medium">Bid Price {{ acct?.BID_PRICE || 0 | currency: currency:'symbol':'1.4-4' }}</h2>
       </ion-label>
     </ion-item>
     <!-- <div class="ion-padding-start ion-padding-end">
