--- a/src/app/modules/home/components/quick-actions/quick-actions.component.html
+++ b/src/app/modules/home/components/quick-actions/quick-actions.component.html
@@ -1,13 +1,5 @@
 
-<div class="scrollable-chips">
-  <!-- <ion-card class="product bg-light ion-no-margin no-shadow" *ngFor="let product of products" (click)="onclick.emit('actionmodal');onSelect.emit(product)">
-    <ion-fab-button class="no-shadow bg-transparent">
-      <i [ngClass]="product?.icon"></i>
-    </ion-fab-button>
-    <ion-label>
-      <h2 [innerHTML]="product?.label"></h2>
-    </ion-label>
-  </ion-card> -->
+<!-- <div class="scrollable-chips">
     <div class="product fb" align="center" *ngFor="let product of products" (click)="onSelect.emit(product)">
       <ion-fab-button class="no-shadow" color="primary">
         <i [ngClass]="product?.icon"></i>
@@ -16,23 +8,19 @@
         <h2 class="fs-12 text-dark" [innerHTML]="product?.label"></h2>
       </ion-label>
     </div>
-</div>
+</div> -->
 
-<!-- <ion-grid>
+<ion-grid>
   <ion-row>
-    <ion-col size="3" align="center" *ngFor="let product of products">
-      <ion-fab-button class="no-shadow" color="light">
-        <i [ngClass]="product?.icon"></i>
-      </ion-fab-button>
-      <ion-label>
-        <h2 class="fs-12" [innerHTML]="product?.label"></h2>
-      </ion-label>
-    </ion-col>
-    <ion-col align="center">
-    </ion-col>
-    <ion-col align="center">
-    </ion-col>
-    <ion-col align="center">
+    <ion-col class="ion-no-padding" size="3" align="center" *ngFor="let product of products">
+      <ion-card class="product ion-no-padding ion-no-margin">
+        <ion-fab-button class="no-shadow bg-transparent">
+          <i [ngClass]="product?.icon"></i>
+        </ion-fab-button>
+        <ion-label>
+          <h2 [innerHTML]="product?.label"></h2>
+        </ion-label>
+      </ion-card>
     </ion-col>
   </ion-row>
-</ion-grid> -->
+</ion-grid>
