--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -1,9 +1,9 @@
 <form [formGroup]="loginForm" (ngSubmit)="onsubmit.emit(loginForm.value)" class="form">
   <ion-row>
     <ion-col size="12">
-      <ion-label aria-label="radix pin" class="fs-12 text-dark">Radix Pin</ion-label>
+      <ion-label aria-label="cardinalstone pin" class="fs-12 text-dark">Cardinalstone Pin</ion-label>
       <ion-item class="ion-no-padding ion-item-border-radius" color="light" mode="ios">
-        <ion-input aria-label="radix pin" formControlName="pin" aria-label="radix pin" type="text" placeholder="Your PIN / Phone Number"></ion-input>
+        <ion-input appUppercase aria-label="cardinalstone pin" formControlName="pin" aria-label="cardinalstone pin" type="text" placeholder="Your PIN / Phone Number"></ion-input>
       </ion-item>
       <div class="validation-errors fs-12 text-danger">
         <div *ngFor="let validation of validation_messages.pin">
@@ -16,9 +16,9 @@
       </div>
     </ion-col>
     <ion-col size="12">
-      <ion-label class="fs-12 text-dark">Radix Passcode</ion-label>
+      <ion-label class="fs-12 text-dark">Cardinalstone Passcode</ion-label>
       <ion-item class="ion-no-padding ion-item-border-radius" color="light" mode="ios">
-        <ion-input formControlName="password" [type]="!hide ? 'text' : 'password'" aria-label="radix passcode" placeholder="XXXXXXX" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
+        <ion-input formControlName="password" [type]="!hide ? 'text' : 'password'" aria-label="cardinalstone passcode" placeholder="XXXXXXX" style="margin-top: -5px;margin-bottom: -5px"></ion-input>
         <ion-button slot="end" (click)="togglePasswordFieldType()" color="dark" fill="clear" style="margin-top: 3px;">
           <i *ngIf="hide" class="ri-eye-close-line ri-xl fs-18"></i>
           <i *ngIf="!hide" class="ri-eye-fill ri-xl fs-18"></i>
