--- a/src/app/modules/login/login.page.html
+++ b/src/app/modules/login/login.page.html
@@ -13,7 +13,7 @@
   <ion-list-header class="ion-margin-bottom">
     <ion-label>
       <h2 class="fs-20">Welcome Back</h2>
-      <p class="ion-text-wrap fs-12">By continuning, you agree to Radix terms of service and acknolwedge our privacy policy</p>
+      <p class="ion-text-wrap fs-12">By continuning, you agree to Cardinal Stone terms of service and acknolwedge our privacy policy</p>
     </ion-label>
   </ion-list-header>
 
