--- a/src/app/shared/components/layout/mobile/mobile-header/mobile-header.component.html
+++ b/src/app/shared/components/layout/mobile/mobile-header/mobile-header.component.html
@@ -29,7 +29,7 @@
         <ion-img [src]="'https://ui-avatars.com/api/?name='+username+'&color=000000&&background=f4f5f8'"></ion-img>
       </ion-avatar>
       <ion-label  *ngIf="title == 'home'">
-         <h2 class="fs-14 text-primary">{{greetings | titlecase}}, {{ username | titlecase }}</h2>
+         <h2 class="fs-14">{{greetings | titlecase}}, {{ username | titlecase }}</h2>
          <p class="fs-12 text-medium">{{ accountnumber | uppercase }}</p>
       </ion-label>
       <!-- <ion-item *ngIf="title == 'home'" lines="none" [color]="'green'" class="bg-transparent" mode="ios">
