--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -9,7 +9,7 @@
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   // --ion-color-primary-shade: #21205c6a;
-  // --ion-color-primary-shade: #21205ce3;
+  --ion-color-primary-shade: #21205ce3;
   --ion-color-primary-tint: #605dff;
 
   /** secondary **/
