--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -3,7 +3,7 @@
     <ion-col size="12">
       <ion-label aria-label="cardinalstone pin" class="fs-12 text-dark">Cardinalstone Pin</ion-label>
       <ion-item class="ion-no-padding ion-item-border-radius" color="light" mode="ios">
-        <ion-input appUppercase aria-label="cardinalstone pin" formControlName="pin" aria-label="cardinalstone pin" type="text" placeholder="Your PIN / Phone Number"></ion-input>
+        <ion-input appUppercase aria-label="cardinalstone pin" formControlName="pin" aria-label="cardinalstone pin" type="text" placeholder="Your CardinalStone PIN"></ion-input>
       </ion-item>
       <div class="validation-errors fs-12 text-danger">
         <div *ngFor="let validation of validation_messages.pin">
