--- a/src/app/modules/forgot/forgot.page.html
+++ b/src/app/modules/forgot/forgot.page.html
@@ -12,7 +12,7 @@
   <ion-list-header class="ion-margin-bottom">
     <ion-label>
       <h2 class="fs-20">Recover your account</h2>
-      <p class="ion-text-wrap fs-12">By continuning, you agree to Radix terms of service and acknolwedge our privacy policy</p>
+      <p class="ion-text-wrap fs-12">By continuning, you agree to CardinalStone terms of service and acknolwedge our privacy policy</p>
     </ion-label>
   </ion-list-header>
 
